[package]
name = "rust-invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = ["bevy/dynamic"]

[dependencies]
# These are the remaining default features other than `bevy_audio` and `vorbis` - https://github.com/bevyengine/bevy/blob/v0.8.0/Cargo.toml#L27-L40
bevy = { version = "0.8.0", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
  "filesystem_watcher",
] }
bevy_kira_audio = { version = "0.12.0", features = ["ogg", "wav"] }
rand = "0.8.5"

[workspace]
resolver = "2"
